--- a/www/index.html
+++ b/www/index.html
@@ -6,26 +6,18 @@
     <title></title>
 
 
-    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-
-    <!-- ionic/angularjs js -->
+    <link href="css/app.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
-    <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/ChapelCreditController.js"></script>
+    <script src="js/LoginController.js"></script>
+    <script src="js/DataService.js"></script>
+    <script src="js/StorageService.js"></script>
+    <script src="js/NameFilter.js"></script>
   </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <body ng-app="gocostudent">
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
