--- a/www/html/login.html
+++ b/www/html/login.html
@@ -1,5 +1,5 @@
 <ion-view class="gordon-blue-background" view-title="Login">
-  <ion-content class="login-content text-center" scroll="false">
+  <ion-content class="login-content text-center">
     <img class="gordon-chapel"
       src="img/gordon-chapel.svg">
     <h2 class="login-title">Log In</h2>
