Remove attribute disabling scroll on ion-content, disable view caching

--- a/www/html/main.html
+++ b/www/html/main.html
@@ -1,5 +1,5 @@
-<ion-view class="gordon-blue-background" view-title="Chapel Credit">
-  <ion-content class="main-content text-center" scroll="false">
+<ion-view class="gordon-blue-background" view-title="Chapel Credit" cache-view="false">
+  <ion-content class="main-content text-center">
     <div class="chapel-loader-container" ng-show="chapel.isLoading">
       <img class="gordon-chapel"
         src="img/gordon-chapel.svg">
