Rename info modal to menu, add refreshData menu item

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -13,6 +13,10 @@
       <ion-item>
         Good luck using <a href="" onclick="window.open('http://go.gordon.edu/', '_system', 'location=yes'); return false;">Go Gordon</a>
       </ion-item>
+      <ion-item class="positive"
+        ng-click="chapel.refreshData()">
+        Refresh
+      </ion-item>
       <ion-item class="assertive"
         ng-click="chapel.logout()">
         Logout
