--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="css/ionic.app.css" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-messages.min.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
     <script src="js/ChapelCreditController.js"></script>
