--- a/www/html/main.html
+++ b/www/html/main.html
@@ -2,7 +2,7 @@
   <ion-content class="main-content text-center">
     <div class="chapel-loader-container" ng-show="chapel.isLoading">
       <img class="gordon-chapel"
-        src="img/gordon-chapel.svg">
+        src="img/logo.svg">
       <h2>LOADING</h2>
     </div>
     <div class="text-container" ng-hide="chapel.isLoading">
