--- a/www/html/login.html
+++ b/www/html/login.html
@@ -1,31 +1,47 @@
 <ion-view class="gordon-blue-background" view-title="Login">
-  <ion-content class="login-content text-center">
+  <ion-content class="login-content">
     <img class="gordon-chapel"
-      src="img/gordon-chapel.svg">
+      src="img/logo.svg">
     <h2 class="login-title">Log In</h2>
-    <form name="loginForm"
+    <form class="login-form"
+      name="loginForm"
       novalidate
       ng-submit="login.loginUser()">
       <p class="login-info text-left">
         Enter your credentials for Go Gordon.
       </p>
-      <div class="list list-inset">
-        <label class="item item-input">
+      <div class="list">
+        <label class="item item-input"
+          ng-class="{ 'has-error' : loginForm.username.$invalid && loginForm.username.$dirty, 'valid': loginForm.username.$valid}">
+          <span class="input-label">Username</span>
           <input type="text"
             required
             placeholder="Firstname.Lastname"
             name="username"
             ng-minlength="3"
+            ng-pattern="/(\w+)(\.)(\w+)[^@]/"
+            ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }"
             ng-model="login.userCredentials.username">
         </label>
-        <label class="item item-input">
+        <ng-messages class="login-errors"
+          for="loginForm.username.$error"
+          ng-show="loginForm.username.$dirty">
+          <ng-message when="minlength">Username must be at least three letters.</ng-message>
+          <ng-message when="pattern">Username must be Firstname.Lastname.</ng-message>
+          <ng-message when="required">Username is required.</ng-message>
+        </ng-messages>
+        <label class="item item-input"
+          ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$dirty, 'valid': loginForm.password.$valid}">
+          <span class="input-label">Password</span>
           <input type="password"
             required
             placeholder="Gordon Password"
             name="password"
+            ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }"
             ng-model="login.userCredentials.password">
         </label>
       </div>
+
       <button type="submit"
         class="login-button button button-light"
         ng-disabled="loginForm.$invalid">
