--- a/www/html/login.html
+++ b/www/html/login.html
@@ -19,7 +19,7 @@
             placeholder="Firstname.Lastname"
             name="username"
             ng-minlength="3"
-            ng-pattern="/(\w+)(\.)(\w+)[^@]/"
+            ng-pattern="/(\w+)(\.)(\w+)/"
             ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }"
             ng-model="login.userCredentials.username">
         </label>
