--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <script src="js/ChapelCreditController.js"></script>
     <script src="js/LoginController.js"></script>
     <script src="js/DataService.js"></script>
+    <script src="js/DatabaseFactory.js"></script>
     <script src="js/StorageService.js"></script>
     <script src="js/NameFilter.js"></script>
   </head>
