Add banner modal, change name of menu modal, refactor toggleModal

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title" ng-click="chapel.toggleModal()">Tap to close</h1>
+    <h1 class="title" ng-click="chapel.toggleModal('menu')">Tap to close</h1>
   </ion-header-bar>
   <ion-content>
     <ion-list>
