--- a/www/html/_banner.html
+++ b/www/html/_banner.html
@@ -2,6 +2,7 @@
   <ion-header-bar>
     <h1 class="title" ng-click="chapel.toggleModal('banner')">Tap to close</h1>
   </ion-header-bar>
-  <ion-content ng-bind-html="chapel.banner.body">
+  <ion-content>
+    <div class="banner-content" ng-bind-html="chapel.banner.body"></div>
   </ion-content>
 </ion-modal-view>
