--- a/www/html/_banner.html
+++ b/www/html/_banner.html
@@ -1,8 +1,8 @@
 <ion-modal-view>
   <ion-header-bar>
-    <h1 class="title" ng-click="chapel.toggleModal('banner')">Tap to close</h1>
+    <h1 class="title" ng-click="modal.toggleModal('banner')">Tap to close</h1>
   </ion-header-bar>
   <ion-content>
-    <div class="banner-content" ng-bind-html="chapel.banner.body"></div>
+    <div class="banner-content" ng-bind-html="banner.body"></div>
   </ion-content>
 </ion-modal-view>
