Add HomeController, ModalService, and LogoutService

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <script src="lib/angular-messages.min.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/HomeController.js"></script>
     <script src="js/ChapelCreditController.js"></script>
     <script src="js/HomeController.js"></script>
     <script src="js/MealPointsController.js"></script>
@@ -17,7 +18,9 @@
     <script src="js/DataService.js"></script>
     <script src="js/UsageService.js"></script>
     <script src="js/DatabaseFactory.js"></script>
+    <script src="js/ModalService.js"></script>
     <script src="js/StorageService.js"></script>
+    <script src="js/LogoutService.js"></script>
     <script src="js/NameFilter.js"></script>
   </head>
   <body ng-app="gocostudent">
