--- a/www/html/mealpoints.html
+++ b/www/html/mealpoints.html
@@ -5,7 +5,7 @@
     ng-click="modal.toggleModal('banner')">
     <h1 class="title">{{banner.title}}</h1>
   </ion-header-bar>
-  <ion-content class="chapel-credit-content center text-center">
+  <ion-content class="meal-points-content center text-center">
     <div class="chapel-loader-container" ng-show="meal.isLoading">
       <img class="gordon-chapel"
         src="img/logo.svg">
