Add instructions for navigation on home view, class: .nav-help

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -12,6 +12,7 @@
           <h2>Chapel Credit</h2>
         </button>
       </a>
+      <div class="nav-help ion-arrow-swap">Select one</div>
       <a href="#/mealpoints">
         <button class="meal-points-button button button-full">
           <div class="meal-points-icon icon"></div>
