Change chapel-message class to error-message for general usage

--- a/www/html/mealpoints.html
+++ b/www/html/mealpoints.html
@@ -17,7 +17,7 @@
         <h1>{{meal.mealPoints}}</h1>
         <h2>meal points</h2>
       </div>
-      <div class="chapel-message" ng-show="meal.message">
+      <div class="error-message" ng-show="meal.message">
         <h2>{{meal.message}}</h2>
       </div>
     </div>
