--- a/www/html/home.html
+++ b/www/html/home.html
@@ -6,19 +6,33 @@
     <h1 class="title">{{banner.title}}</h1>
   </ion-header-bar>
   <ion-content class="home-content center text-center">
-      <a href="#/chapelcredit">
-        <button class="chapel-credit-button button button-full button-positive">
-          <div class="chapel-icon icon"></div>
-          <h2>Chapel Credit</h2>
-        </button>
-      </a>
-      <div class="nav-help ion-arrow-swap">Select one</div>
-      <a href="#/mealpoints">
-        <button class="meal-points-button button button-full">
-          <div class="meal-points-icon icon"></div>
+      <button class="chapel-credit-button button button-full button-positive"
+        ng-click="home.getChapelCredits()">
+        <div class="chapel-icon icon"
+          ng-class="{loading: home.loading.chapelCredits}"
+          ng-hide="home.loading.chapelCredits === false"></div>
+        <div ng-hide="home.errorMessage.chapelCredits">
+          <h1>{{home.chapelCredits}}</h1>
+          <h2>Chapel Credits</h2>
+        </div>
+        <h2 ng-show="home.errorMessage.chapelCredits">
+          {{home.errorMessage.chapelCredits}}
+        </h2>
+      </button>
+      <div class="nav-help ion-arrow-swap">Tap to load</div>
+      <button class="meal-points-button button button-full"
+        ng-click="home.getMealPoints()">
+        <div class="meal-points-icon icon"
+          ng-class="{loading: home.loading.mealPoints}"
+          ng-hide="home.loading.mealPoints === false"></div>
+        <div ng-hide="home.errorMessage.mealPoints">
+          <h1>{{home.mealPoints}}</h1>
           <h2>Meal Points</h2>
-        </button>
-      </a>
+        </div>
+        <h2 ng-show="home.errorMessage.mealPoints">
+          {{home.errorMessage.mealPoints}}
+        </h2>
+      </button>
   </ion-content>
   <ion-footer-bar class="menu-bar bar-light" ng-click="modal.toggleModal('menu')">
     <h1 class="title">Menu</h1>
