--- a/www/html/_banner.html
+++ b/www/html/_banner.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view class="banner-modal">
   <ion-header-bar>
     <h1 class="title" ng-click="modal.toggleModal('banner')">Tap to close</h1>
   </ion-header-bar>
