--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view class="menu-modal">
   <ion-header-bar>
     <h1 class="title" ng-click="modal.toggleModal('menu')">Tap to close</h1>
   </ion-header-bar>
