--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <script src="js/UsageService.js"></script>
     <script src="js/DatabaseFactory.js"></script>
     <script src="js/ModalService.js"></script>
+    <script src="js/PopoverService.js"></script>
     <script src="js/StorageService.js"></script>
     <script src="js/LogoutService.js"></script>
     <script src="js/NameFilter.js"></script>
