--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -1,11 +1,8 @@
-<ion-modal-view class="menu-modal">
-  <ion-header-bar>
-    <h1 class="title" ng-click="modal.toggleModal('menu')">Tap to close</h1>
-  </ion-header-bar>
+<ion-popover-view>
   <ion-content>
     <ion-list>
       <ion-item>
-        Yell at me on Twitter <a href="" onclick="window.open('https://twitter.com/MeetAdamJohn', '_system', 'location=yes'); return false;">@MeetAdamJohn</a>
+        Yell at me <a href="" onclick="window.open('https://twitter.com/MeetAdamJohn', '_system', 'location=yes'); return false;">@MeetAdamJohn</a>
       </ion-item>
       <ion-item>
         Stalk me at <a href="" onclick="window.open('http://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
@@ -16,4 +13,4 @@
       </ion-item>
     </ion-list>
   </ion-content>
-</ion-modal-view>
+</ion-popover-view>
