Fix popover not showing

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -3,7 +3,7 @@
     <h1 class="title">GOCO STUDENT</h1>
     <div class="buttons">
       <button class="button button-icon ion-more"
-        ng-click="home.popover.menu.show($event)">
+        ng-click="popover.showPopover('menu', $event)">
       </button>
     </div>
   </ion-header-bar>
