Add "You have" before numbers, and "Out of" after chapel credit

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -14,10 +14,16 @@
         ng-class="{loading: home.loading.chapelCredits}"
         ng-hide="home.loading.chapelCredits === false"></div>
       <div ng-hide="home.errorMessage.chapelCredits">
+        <h2 ng-show="home.chapelCredits.credit && !home.loading.chapelCredits">
+          You have
+        </h2>
         <h1 ng-hide="home.loading.chapelCredits">
-          {{home.chapelCredits}}
+          {{home.chapelCredits.credit}}
         </h1>
         <h2>Chapel Credits</h2>
+        <h3 ng-show="home.chapelCredits.required && !home.loading.chapelCredits">
+          Out of {{home.chapelCredits.required}}
+        </h3>
       </div>
       <h2 ng-show="home.errorMessage.chapelCredits  && !home.loading.chapelCredits">
         {{home.errorMessage.chapelCredits}}
@@ -29,6 +35,9 @@
         ng-class="{loading: home.loading.mealPoints}"
         ng-hide="home.loading.mealPoints === false"></div>
       <div ng-hide="home.errorMessage.mealPoints">
+        <h2 ng-show="home.mealPoints && !home.loading.mealPoints">
+          You have
+        </h2>
         <h1 ng-hide="home.loading.mealPoints">
           {{home.mealPoints}}
         </h1>
