--- a/www/index.html
+++ b/www/index.html
@@ -10,17 +10,15 @@
     <script src="lib/angular-messages.min.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/HomeController.js"></script>
-    <script src="js/HomeController.js"></script>
-    <script src="js/LoginController.js"></script>
-    <script src="js/DataService.js"></script>
-    <script src="js/UsageService.js"></script>
-    <script src="js/DatabaseFactory.js"></script>
-    <script src="js/ModalService.js"></script>
-    <script src="js/PopoverService.js"></script>
-    <script src="js/StorageService.js"></script>
-    <script src="js/LogoutService.js"></script>
-    <script src="js/NameFilter.js"></script>
+    <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/LoginController.js"></script>
+    <script src="js/services/DataService.js"></script>
+    <script src="js/services/UsageService.js"></script>
+    <script src="js/services/DatabaseFactory.js"></script>
+    <script src="js/services/ModalService.js"></script>
+    <script src="js/services/PopoverService.js"></script>
+    <script src="js/services/StorageService.js"></script>
+    <script src="js/services/LogoutService.js"></script>
   </head>
   <body ng-app="gocostudent">
     <ion-nav-view></ion-nav-view>
