Change to new logout function on menu

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -8,7 +8,7 @@
         Stalk me at <a href="" onclick="window.open('http://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
       </ion-item>
       <ion-item class="assertive"
-        ng-click="logout.logout()">
+        ng-click="logout()">
         Logout
       </ion-item>
     </ion-list>
