--- a/www/html/home.html
+++ b/www/html/home.html
@@ -1,4 +1,4 @@
-<ion-view class="gordon-blue-background" view-title="Home" cache-view="true">
+<ion-view class="gordon-blue-background" view-title="Home" cache-view="false">
   <ion-header-bar class="bar-light">
     <h1 class="title">GOCO STUDENT</h1>
     <div class="buttons">
