Refactor HomeController, fix #7 'banner requires hard restart to refresh'

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -9,7 +9,7 @@
   </ion-header-bar>
   <ion-content class="home-content center text-center">
     <button class="chapel-credit-button button button-full button-positive"
-      ng-click="home.getChapelCredits()">
+      ng-click="home.load('chapelCredits')">
       <div class="chapel-icon icon"
         ng-class="{loading: home.loading.chapelCredits}"
         ng-hide="home.loading.chapelCredits === false"></div>
@@ -28,14 +28,14 @@
       </h2>
     </button>
     <button class="meal-points-button button button-full"
-      ng-click="home.getMealPoints()">
+      ng-click="home.load('mealPoints')">
       <div class="meal-points-icon icon"
         ng-class="{loading: home.loading.mealPoints}"
         ng-hide="home.loading.mealPoints === false"></div>
       <div ng-hide="home.errorMessage.mealPoints">
         <h1 class="meal-points-number"
           ng-hide="!home.mealPoints || home.loading.mealPoints">
-          {{home.mealPoints}}
+          {{home.mealPoints.mealpoints}}
         </h1>
         <h2>Meal Points</h2>
       </div>
