--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
     <script src="lib/angular-messages.min.js"></script>
     <script src="cordova.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/constants.js"></script>
+    <script src="js/filters.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/services/DataService.js"></script>
