Add menu item for Options modal

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -7,6 +7,10 @@
       <ion-item>
         Stalk me at <a href="" onclick="window.open('http://www.adamvig.com/', '_system', 'location=yes'); return false;">AdamVig.com</a>
       </ion-item>
+      <ion-item class="positive"
+        ng-click="modal.toggleModal('configuration')">
+        Options
+      </ion-item>
       <ion-item class="assertive"
         ng-click="logout()">
         Logout
