Fix menu not auto-hiding on click

--- a/www/html/_menu.html
+++ b/www/html/_menu.html
@@ -1,6 +1,6 @@
 <ion-popover-view>
   <ion-content>
-    <ion-list>
+    <ion-list ng-click="popover.hidePopover('menu')">
       <ion-item>
         Yell at me <a href="" onclick="window.open('https://twitter.com/MeetAdamJohn', '_system', 'location=yes'); return false;">@MeetAdamJohn</a>
       </ion-item>
