--- a/www/index.html
+++ b/www/index.html
@@ -12,12 +12,15 @@
     <script src="js/app.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/filters.js"></script>
+    <script src="js/directives/infoModule.js"></script>
+    <script src="js/directives/interactionModule.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
     <script src="js/services/DataService.js"></script>
     <script src="js/services/UsageService.js"></script>
     <script src="js/services/DatabaseFactory.js"></script>
     <script src="js/services/ModalService.js"></script>
+    <script src="js/services/ModuleService.js"></script>
     <script src="js/services/PopoverService.js"></script>
     <script src="js/services/StorageService.js"></script>
     <script src="js/services/LogoutService.js"></script>
