--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
     <script src="js/app.js"></script>
     <script src="js/constants.js"></script>
     <script src="js/filters.js"></script>
+    <script src="js/directives/appBanner.js"></script>
+    <script src="js/directives/appHeader.js"></script>
     <script src="js/directives/infoModule.js"></script>
     <script src="js/directives/interactionModule.js"></script>
     <script src="js/controllers/HomeController.js"></script>
