--- a/www/html/home.html
+++ b/www/html/home.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
   <ion-content class="home-content center text-center">
     <info-module
-      ng-repeat="module in home.selectedModules"
+      ng-repeat="module in selectedModules"
       info-type="module.name"
       info-label="module.label"
       icon-class="module.icon"
