Add info-prefix to prefix mealpoints and mealpoints/day (resolves #17)

--- a/www/html/directives/_infomodule.html
+++ b/www/html/directives/_infomodule.html
@@ -9,7 +9,7 @@
         ng-hide="module.loading === false"></div>
       <h1 class="info-number"
         ng-hide="!module.data || module.loading">
-        {{module.data}}
+        {{module.prefix}}{{module.data}}
       </h1>
     </div>
     <div class="module-right column">
