--- a/www/html/home.html
+++ b/www/html/home.html
@@ -6,6 +6,7 @@
       info-type="module.name"
       info-label="module.label"
       icon-class="module.icon"
+      info-prefix="module.prefix"
       ng-class="home.moduleClass"></info-module>
   </ion-content>
   <app-banner></app-banner>
