Remove CouchDB dependency (resolves #22)
- Create new user in database via API on login
- Log usage on server with every request
- Refresh banner with every request

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -7,6 +7,7 @@
       info-label="module.label"
       icon-class="module.icon"
       info-prefix="module.prefix"
+      load-callback="home.refreshBanner()"
       ng-class="home.moduleClass"></info-module>
   </ion-content>
   <app-banner></app-banner>
