Add popup to explain configuration page on first time (resolves #24)

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/services/ModalService.js"></script>
     <script src="js/services/ModuleService.js"></script>
     <script src="js/services/PopoverService.js"></script>
+    <script src="js/services/PopupService.js"></script>
     <script src="js/services/StorageService.js"></script>
     <script src="js/services/LogoutService.js"></script>
   </head>
