Fix ugly scrollbar (resolves #26)

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -1,6 +1,6 @@
 <ion-view class="gordon-blue-background" view-title="Home" cache-view="false">
   <app-header></app-header>
-  <ion-content class="home-content center text-center">
+  <ion-content class="home-content center text-center" scroll="false">
     <info-module
       ng-repeat="module in selectedModules"
       info-type="module.name"
