--- a/www/html/home.html
+++ b/www/html/home.html
@@ -7,7 +7,7 @@
       info-label="module.label"
       icon-class="module.icon"
       info-prefix="module.prefix"
-      load-callback="home.refreshBanner()"
+      load-callback="home.refreshAppInfo()"
       ng-class="home.moduleClass"></info-module>
   </ion-content>
   <app-banner></app-banner>
