Refactor app color palette
- Rename colors to describe what they look like, not what they are for
- Store colors in a SASS map
- Create color classes dynamically using @each based on the colors map
- Move all variables to _variables.scss
- Update module configuration to use new color classes
- Fix module styles so colors don't have to be duplicated in .button
- Update infoModule directive to apply color class

--- a/www/html/directives/_infomodule.html
+++ b/www/html/directives/_infomodule.html
@@ -1,5 +1,5 @@
 <button class="button button-full activated"
-  ng-class="module.className"
+  ng-class="module.fullClass"
   ng-click="module.load()">
   <div class="module-content"
     ng-hide="module.errorMessage">
