--- a/www/html/home.html
+++ b/www/html/home.html
@@ -8,6 +8,7 @@
       info-type="module.name"
       info-label="module.label"
       icon-class="module.icon"
+      color-class="module.color"
       info-prefix="module.prefix"
       load-callback="home.refreshAppInfo()"
       ng-class="home.moduleClass"></info-module>
