Fix student ID font sizing, add module font size property (resolves #32)

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -9,6 +9,7 @@
       info-label="module.label"
       icon-class="module.icon"
       color-class="module.color"
+      font-size="module.fontSize"
       info-prefix="module.prefix"
       load-callback="home.refreshAppInfo()"
       ng-class="home.moduleClass"></info-module>
