Add suffix property to modules (resolves #40)

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -11,6 +11,7 @@
       color-class="module.color"
       font-size="module.fontSize"
       info-prefix="module.prefix"
+      info-suffix="module.suffix"
       load-callback="home.refreshAppInfo()"
       ng-class="home.moduleClass"></info-module>
   </ion-content>
