Change login username input to only validate on blur

--- a/www/html/login.html
+++ b/www/html/login.html
@@ -22,7 +22,7 @@
             name="username"
             ng-minlength="3"
             ng-pattern="/(\w+)(\.)(\w+)/"
-            ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }"
+            ng-model-options="{ updateOn: 'blur'}"
             ng-model="login.userCredentials.username">
         </label>
         <ng-messages class="login-errors"
