--- a/www/html/privacypolicy.html
+++ b/www/html/privacypolicy.html
@@ -1,65 +1,22 @@
 <ion-view class="gordon-blue-background" view-title="Post Login" cache-view="false">
-  <ion-content class="post-login-content center text-center"
-    ng-class="postLogin.status">
-    <div ng-show="postLogin.status == 'checking'">
-      <ion-spinner icon="lines"></ion-spinner>
-      <h2>Checking Login...</h2>
-      <div class="login-check-timeout text-center"
-        ng-show="postLogin.timeout === true">
-        <h3>Taking too long?</h3>
-        <button ng-click="postLogin.goHome()"
-          class="button button-light">
-          Continue anyway →
-        </button>
-      </div>
-    </div>
-    <div ng-show="postLogin.status == 'invalid'"
-      class="login-invalid">
-      <div class="ion-close status-icon"></div>
-      <h2>Invalid Login</h2>
-      <button ng-click="postLogin.goLogin()"
-        class="button button-light">
-        ← Try again
-      </button>
-    </div>
-    <div ng-show="postLogin.status == 'unknown'"
-      class="login-unknown">
-      <div class="ion-help status-icon"></div>
-      <h2>Something went wrong.</h2>
-      <button ng-click="postLogin.goHome()"
-        class="button button-light">
-        Continue anyway →
-      </button>
-    </div>
-    <div ng-show="postLogin.status == 'valid'"
-      class="login-valid">
-      <div class="ion-checkmark status-icon"></div>
-      <h2>Valid Login</h2>
-      <button ng-click="postLogin.goHome()"
-        class="button button-light horizontal-center">
-        Continue →
-      </button>
-    </div>
-    <div ng-show="postLogin.status == 'privacy-policy'"
-      class="login-privacy-policy">
-      <h2>Privacy Policy</h2>
-      <p class="privacy-policy-text">
-        Your password and student ID number are never stored
-        anywhere except on your device.
-        <br><br>
-        By default, any data you access in this app is stored in a secure
-        database to provide you with a better user experience.
-        <br><br>
-        Tap "Continue storing data" to agree to this privacy policy.
-      </p>
-      <button ng-click="postLogin.goFromPrivacyPolicy(false)"
-        class="button button-opt-out">
-        Opt Out
-      </button>
-      <button ng-click="postLogin.goFromPrivacyPolicy(true)"
-        class="button button-continue">
-        Continue storing data →
-      </button>
-    </div>
+  <ion-content class="privacy-policy-content center text-center">
+    <h2>Privacy Policy</h2>
+    <p class="privacy-policy-text">
+      Your password and student ID number are <em>never</em> stored
+      anywhere except on your device.
+      <br><br>
+      By default, data you access in this app is stored in a secure
+      database to improve your user experience.
+      <br><br>
+      Tap "Continue storing data" to agree to this privacy policy.
+    </p>
+    <button ng-click="privacyPolicy.go(false)"
+      class="button button-opt-out">
+      Opt Out
+    </button>
+    <button ng-click="privacyPolicy.go(true)"
+      class="button button-continue">
+      Continue storing data →
+    </button>
   </ion-content>
 </ion-view>
