Change home to automatically load data on app open (resolves #47)

--- a/www/html/home.html
+++ b/www/html/home.html
@@ -6,6 +6,7 @@
     overflow-scroll="true">
     <info-module
       ng-repeat="module in selectedModules"
+      module-control="moduleControl"
       info-type="module.name"
       info-label="module.label"
       icon-class="module.icon"
