--- a/www/html/home.html
+++ b/www/html/home.html
@@ -7,13 +7,13 @@
     <info-module
       ng-repeat="module in selectedModules"
       module-control="moduleControl"
-      info-type="module.name"
-      info-label="module.label"
+      type="module.name"
+      label="module.label"
       icon-class="module.icon"
       color-class="module.color"
       font-size="module.fontSize"
-      info-prefix="module.prefix"
-      info-suffix="module.suffix"
+      prefix="module.prefix"
+      suffix="module.suffix"
       load-callback="home.refreshAppInfo()"
       ng-class="home.moduleClass"></info-module>
   </ion-content>
