--- a/www/html/home.html
+++ b/www/html/home.html
@@ -7,10 +7,10 @@
     <goco-module ng-class="home.moduleClass"
       ng-repeat="module in selectedModules"
       module-type="module.moduleType"
-      data-type="module.dataType"
+      endpoint="module.endpoint"
       label="module.label"
       icon="module.icon"
-      class="module.color"
+      module-class="module.moduleClass"
       prefix="module.prefix"
       suffix="module.suffix"
       load-callback="home.refreshAppInfo()"
