--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <script src="js/directives/gocoModule.js"></script>
     <script src="js/controllers/HomeController.js"></script>
     <script src="js/controllers/LoginController.js"></script>
+    <script src="js/controllers/ModuleViewController.js"></script>
     <script src="js/controllers/PrivacyPolicyController.js"></script>
     <script src="js/services/DataService.js"></script>
     <script src="js/services/ModalService.js"></script>
