--- a/www/html/moduleview.html
+++ b/www/html/moduleview.html
@@ -1,6 +1,8 @@
 <ion-view class="gordon-blue-background" view-title="Module View">
-  <app-header></app-header>
-  <ion-content class="module-view-content" scroll="true" overflow-scroll="true">
+  <app-header back-button="true"></app-header>
+  <ion-content class="module-view-content has-header"
+    scroll="true"
+    overflow-scroll="true">
     <h3 class="error text-center vertical-center"
       ng-bind="moduleView.errorMessage"
       ng-if="moduleView.errorMessage"></h3>
