Add back button to app header

--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -1,4 +1,9 @@
 <ion-header-bar class="bar-light">
+  <div class="buttons" ng-show="backButton">
+    <button class="button button-icon ion-arrow-left-c"
+      ng-click="goHome()">
+    </button>
+  </div>
   <h1 class="title">GOCO STUDENT</h1>
   <div class="buttons">
     <button class="button button-icon ion-more"
