--- a/www/html/directives/_appheader.html
+++ b/www/html/directives/_appheader.html
@@ -7,7 +7,7 @@
   <h1 class="title">GOCO STUDENT</h1>
   <div class="buttons">
     <button class="button button-icon ion-more"
-      ng-click="popover.showPopover('menu', $event)">
+      ng-click="showMenu($event)">
     </button>
   </div>
 </ion-header-bar>
