--- a/www/html/_configuration.html
+++ b/www/html/_configuration.html
@@ -1,6 +1,6 @@
 <ion-modal-view class="configuration-modal">
   <ion-header-bar>
-    <h1 class="title" ng-click="modal.toggleModal('configuration')">Tap to close</h1>
+    <h1 class="title" ng-click="hideConfigurationModal()">Tap to close</h1>
     <button class="reorder-button button button-clear button-positive"
       ng-model="showReorder"
       ng-click="showReorder = !showReorder"
