--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="js/controllers/PrivacyPolicyController.js"></script>
     <script src="js/services/DataService.js"></script>
     <script src="js/services/ModalService.js"></script>
+    <script src="js/services/ModuleFactory.js"></script>
     <script src="js/services/ModuleService.js"></script>
     <script src="js/services/PopoverService.js"></script>
     <script src="js/services/PopupService.js"></script>
